crates/runtime/tests/snapshots/integration__spiceai_integration_test_single_source_federation_push_down_select_eth_logs.snap
---
source: crates/runtime/tests/integration.rs
description: "Query: SELECT *\n            FROM eth.logs\n            ORDER BY block_number DESC \n            LIMIT 10"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | BytesProcessedNode                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
|               |   Federated                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
|               |   Sort: eth.logs.block_number DESC NULLS FIRST                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
|               |     Projection: eth.logs.log_index, eth.logs.transaction_hash, eth.logs.transaction_index, eth.logs.address, eth.logs.data, eth.logs.topics, eth.logs.block_timestamp, eth.logs.block_hash, eth.logs.block_number                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
|               |       TableScan: eth.logs                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| physical_plan | BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
|               |   SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
|               |     RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
|               |       VirtualExecutionPlan name=spice.ai compute_context=url=https://flight.spiceai.io,username= sql=SELECT eth."logs".log_index, eth."logs".transaction_hash, eth."logs".transaction_index, eth."logs".address, eth."logs"."data", eth."logs".topics, eth."logs".block_timestamp, eth."logs".block_hash, eth."logs".block_number FROM eth."logs" ORDER BY eth."logs".block_number DESC NULLS FIRST LIMIT 10 rewritten_sql=SELECT eth.recent_logs.log_index, eth.recent_logs.transaction_hash, eth.recent_logs.transaction_index, eth.recent_logs.address, eth.recent_logs."data", eth.recent_logs.topics, eth.recent_logs.block_timestamp, eth.recent_logs.block_hash, eth.recent_logs.block_number FROM eth.recent_logs ORDER BY eth.recent_logs.block_number DESC NULLS FIRST LIMIT 10 |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
