crates/runtime/tests/snapshots/integration__spiceai_integration_test_single_source_federation_push_down_select_number_filter.snap
---
source: crates/runtime/tests/integration.rs
description: "Query: SELECT number, hash FROM full_blocks WHERE number BETWEEN 1000 AND 2000 ORDER BY number DESC LIMIT 10"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | BytesProcessedNode                                                                                                                                                                                                                                                                                                                                                                                                                                          |
|               |   Federated                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                                                                                                                                                                                                                                                                                    |
|               |   Sort: full_blocks.number DESC NULLS FIRST                                                                                                                                                                                                                                                                                                                                                                                                                 |
|               |     Projection: full_blocks.number, full_blocks.hash                                                                                                                                                                                                                                                                                                                                                                                                        |
|               |       Filter: full_blocks.number BETWEEN Int64(1000) AND Int64(2000)                                                                                                                                                                                                                                                                                                                                                                                        |
|               |         TableScan: full_blocks                                                                                                                                                                                                                                                                                                                                                                                                                              |
| physical_plan | BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                          |
|               |   CoalescePartitionsExec                                                                                                                                                                                                                                                                                                                                                                                                                                    |
|               |     SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                                                                      |
|               |       RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                                                                                                                                                                                                  |
|               |         VirtualExecutionPlan name=spice.ai compute_context=url=https://flight.spiceai.io,username= sql=SELECT full_blocks.number, full_blocks."hash" FROM full_blocks WHERE (full_blocks.number BETWEEN 1000 AND 2000) ORDER BY full_blocks.number DESC NULLS FIRST LIMIT 10 rewritten_sql=SELECT eth.blocks.number, eth.blocks."hash" FROM eth.blocks WHERE (eth.blocks.number BETWEEN 1000 AND 2000) ORDER BY eth.blocks.number DESC NULLS FIRST LIMIT 10 |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
