crates/runtime/tests/snapshots/integration__test_github_commits_auto.snap
---
source: crates/runtime/tests/integration.rs
description: "Query: SELECT * FROM spiceai_commits_auto LIMIT 10"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                        |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Limit: skip=0, fetch=10                                                                                                                                                     |
|               |   TableScan: spiceai_commits_auto projection=[sha, id, author_name, author_email, committed_date, message, message_body, message_head_line, additions, deletions], fetch=10 |
| physical_plan | CooperativeExec                                                                                                                                                             |
|               |   BytesProcessedExec                                                                                                                                                        |
|               |     GraphQLTableProviderExec limit=[10]                                                                                                                                     |
|               |                                                                                                                                                                             |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
