crates/runtime/tests/snapshots/integration__test_github_pull_requests_auto.snap
---
source: crates/runtime/tests/integration.rs
description: "Query: SELECT additions, review_comments, discussion FROM spiceai_pulls_auto LIMIT 10"
---
+---------------+---------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                |
+---------------+---------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: spiceai_pulls_auto.additions, spiceai_pulls_auto.review_comments, spiceai_pulls_auto.discussion         |
|               |   Limit: skip=0, fetch=10                                                                                           |
|               |     TableScan: spiceai_pulls_auto projection=[additions, discussion, review_comments], fetch=10                     |
| physical_plan | ProjectionExec: expr=[additions@0 as additions, review_comments@38 as review_comments, discussion@37 as discussion] |
|               |   GlobalLimitExec: skip=0, fetch=10                                                                                 |
|               |     CooperativeExec                                                                                                 |
|               |       BytesProcessedExec                                                                                            |
|               |         GraphQLTableProviderExec limit=[10]                                                                         |
|               |                                                                                                                     |
+---------------+---------------------------------------------------------------------------------------------------------------------+
