crates/runtime/tests/snapshots/integration__test_github_stargazers_auto.snap
---
source: crates/runtime/tests/integration.rs
description: "Query: SELECT * FROM spiceai_stargazers_auto LIMIT 10"
---
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                    |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Limit: skip=0, fetch=10                                                                                                                                 |
|               |   TableScan: spiceai_stargazers_auto projection=[starred_at, login, email, name, company, x_username, location, avatar_url, bio, owner, repo], fetch=10 |
| physical_plan | GlobalLimitExec: skip=0, fetch=10                                                                                                                       |
|               |   CooperativeExec                                                                                                                                       |
|               |     BytesProcessedExec                                                                                                                                  |
|               |       GraphQLTableProviderExec limit=[10]                                                                                                               |
|               |                                                                                                                                                         |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------+
