crates/runtime/tests/snapshots/integration__test_graphql_pagination_select_all.snap
---
source: crates/runtime/tests/integration.rs
description: "Query: SELECT * FROM test_graphql"
---
+---------------+--------------------------------------------------------+
| plan_type     | plan                                                   |
+---------------+--------------------------------------------------------+
| logical_plan  | BytesProcessedNode                                     |
|               |   TableScan: test_graphql projection=[id, name, posts] |
| physical_plan | BytesProcessedExec                                     |
|               |   CooperativeExec                                      |
|               |     GraphQLTableProviderExec                           |
|               |                                                        |
+---------------+--------------------------------------------------------+
