crates/runtime/tests/snapshots/integration__test_graphql_select_all.snap
---
source: crates/runtime/tests/integration.rs
description: "Query: SELECT * FROM test_graphql"
---
+---------------+------------------------------------------------------+
| plan_type     | plan                                                 |
+---------------+------------------------------------------------------+
| logical_plan  | TableScan: test_graphql projection=[id, name, posts] |
| physical_plan | CooperativeExec                                      |
|               |   BytesProcessedExec                                 |
|               |     GraphQLTableProviderExec                         |
|               |                                                      |
+---------------+------------------------------------------------------+
