crates/runtime/tests/snapshots/integration__test_graphql_select_posts_title.snap
---
source: crates/runtime/tests/integration.rs
description: "Query: SELECT posts[1]['title'] from test_graphql"
---
+---------------+-----------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                      |
+---------------+-----------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: get_field(array_element(test_graphql.posts, Int64(1)), Utf8("title"))                         |
|               |   TableScan: test_graphql projection=[posts]                                                              |
| physical_plan | ProjectionExec: expr=[get_field(array_element(posts@0, 1), title) as test_graphql.posts[Int64(1)][title]] |
|               |   RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                    |
|               |     ProjectionExec: expr=[posts@2 as posts]                                                               |
|               |       BytesProcessedExec                                                                                  |
|               |         GraphQLTableProviderExec                                                                          |
|               |                                                                                                           |
+---------------+-----------------------------------------------------------------------------------------------------------+
